--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>
-		1906837
+		Stateless Malaysians
 	</title>
 
 	<style>
@@ -17,15 +17,12 @@
 <center>
 <br><br><br><br>
 	<table>
-	<tr><td>Welcome to <b>1906837.xyz</b></td></tr>
+	<tr><td>Welcome to <b>Stateless.my</b></td></tr>
 	<tr><td><h1>WORK IN PROGRESS</h1></td></tr>
-	<!-- <tr><td><img src="usstt.png"></td></tr> -->
-	<tr><td style="font-size: 8pt">Date Created: 30TH SEPTEMBER 2019</td></tr>
+	<tr><td><img src="usstt.png"></td></tr>
+	<tr><td style="font-size: 8pt">Date Created: 27th SEPTEMBER 2022</td></tr>
 	<tr><td>
-	    <div id="sfc5lnnzl2r3pjz626hjn4cfdtcy9esxa99"></div>
-	    <script type="text/javascript" src="https://counter2.stat.ovh/private/counter.js?c=5lnnzl2r3pjz626hjn4cfdtcy9esxa99&down=async" async></script>
-	    <noscript><a href="https://www.freecounterstat.com" title="free counter">
-	    <img src="https://counter2.stat.ovh/private/freecounterstat.php?c=5lnnzl2r3pjz626hjn4cfdtcy9esxa99" border="0" title="free counter" alt="free counter"></a></noscript>                       
+	<i>"Hidup Tetapi Tiada Kehidupan, Bercita-cita Tetapi Tiada Masa Depan.</i>"
     </td></tr>
 	</table>
 <br><br>
