--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <center>
 <br><br><br><br>
 	<table>
-	<tr><td>Welcome to <b>Stateless.my</b></td></tr>
+	<tr><td><b><i>Stateless Malaysians</i></b></td></tr>
+	<tr><td><b>Stateless.my</b></td></tr>
 	<tr><td><h1>WORK IN PROGRESS</h1></td></tr>
 	<tr><td><img src="usstt.png"></td></tr>
 	<tr><td style="font-size: 8pt">Date Created: 27th JANUARY 2022</td></tr>
