--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<tr><td><b><i>Stateless Malaysians</i></b></td></tr>
 	<tr><td><b>Stateless.my</b></td></tr>
 	<tr><td><h1>WORK IN PROGRESS</h1></td></tr>
+	<tr><td><i>We believe that citizenship should not be exclusively proven via papers. Everyone can be stateless, every stateless can be Malaysians.</i></td></tr>
 	<tr><td><img src="usstt.png"></td></tr>
 	<tr><td style="font-size: 8pt">Date Created: 27th JANUARY 2022</td></tr>
 	<tr><td>
