--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <center>
 <br><br><br><br>
 	<table>
-	<tr><td><b><i>Stateless Malaysians</i></b></td></tr>
-	<tr><td><b>Stateless.my</b></td></tr>
+	<tr><td><b><i>Stateless Malaysians (STATELESS.my)</i></b></td></tr>
 	<tr><td><h1>WORK IN PROGRESS</h1></td></tr>
 	<tr><td><i>We believe that citizenship should not be exclusively proven via papers. Everyone can be stateless, every stateless can be Malaysians.</i></td></tr>
 	<tr><td><img src="usstt.png"></td></tr>
