--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<table>
 	<tr><td><b><i>Stateless Malaysians (STATELESS.my)</i></b></td></tr>
 	<tr><td><h1>WORK IN PROGRESS</h1></td></tr>
-	<tr><td><i>We believe that citizenship should not be exclusively proven via papers. Everyone can be stateless, every stateless can be Malaysians.</i></td></tr>
+	<tr><td><i>We believe that citizenship should not be exclusively proven via papers.</i></td></tr>
+	<tr><td><i>Every Malaysians can be stateless, every stateless person can be Malaysian.</i></td></tr>
 	<tr><td><img src="usstt.png"></td></tr>
 	<tr><td style="font-size: 8pt">Date Created: 27th JANUARY 2022</td></tr>
 	<tr><td>
