--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
-<title>Stateless.my &#8211; Just another WordPress site</title>
+<title>Stateless.my &#8211; Stateless Malaysians</title>
 <link rel="dns-prefetch" href="//s.w.org">
 <link rel="alternate" type="application/rss+xml" title="Stateless.my &raquo; Feed" href="http://stateless.my/feed/">
 <link rel="alternate" type="application/rss+xml" title="Stateless.my &raquo; Comments Feed" href="http://stateless.my/comments/feed/">
@@ -123,11 +123,10 @@ img.emoji {
 
 
 <figure class="wp-block-table is-style-stripes"><table><tbody>
-<tr><td class="has-text-align-center" data-align="center">
-<strong>WORK IN PROGRESS</strong><br><br><em><code>We believe that citizenship should not be exclusively proven via papers.</code></em>
-</td></tr>
-<tr><td class="has-text-align-center" data-align="center"><em><code>Every Malaysians can be stateless, every stateless person can be Malaysian.</code></em></td></tr>
-</tbody></table></figure>
+<tr><td class="has-text-align-center" data-align="center"><strong>WORK IN PROGRESS</strong></td></tr>
+<tr><td class="has-text-align-center" data-align="center"><em><code>We believe that citizenship should not be exclusively proven via papers.</code></em></td></tr>
+</tbody></table>
+<figcaption><em><code>Every Malaysians can be stateless, every stateless person can be Malaysian.</code></em></figcaption></figure>
 
 
 
@@ -143,11 +142,11 @@ img.emoji {
 <p class="wp-block-site-title"><a href="http://stateless.my/" rel="home" aria-current="page">Stateless.my</a></p>
 
 
-<p>27th January 2022</p>
+<p><em>&#8220;Hidup Tetapi Tiada Kehidupan, Bercita-cita Tetapi Tiada Masa Depan.</em>&#8220;</p>
 
 
 
-<p class="has-text-align-right"><em>&#8220;Hidup Tetapi Tiada Kehidupan, Bercita-cita Tetapi Tiada Masa Depan.</em>&#8220;</p>
+<p></p>
 </div>
 </div>
 </div>
