--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -20,27 +20,27 @@ comments: false
 
                     {% if author[1].web %}
                     <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].web }}"><i
-                            class="fa fa-link"></i></a>
+                            class="fa-solid fa-link"></i></a>
                     {% endif %}
 
                     {% if author[1].facebook %}
                     <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].facebook }}"><i
-                            class="fab fa-facebook"></i></a>
+                            class="fa-brands fa-facebook"></i></a>
                     {% endif %}
 
                     {% if author[1].instagram %}
                     <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].instagram }}"><i
-                            class="fab fa-instagram-square"></i></a>
+                            class="fa-brands fa-instagram-square"></i></a>
                     {% endif %}
 
                     {% if author[1].twitter %}
                     <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].twitter }}"><i
-                            class="fab fa-twitter"></i></a>
+                            class="fa-brands fa-twitter"></i></a>
                     {% endif %}
 
                     {% if author[1].email %}
                     <a class="d-inline-block mx-1 text-dark" href="mailto:{{ author[1].email }}"><i
-                            class="fa fa-envelope"></i></a>
+                            class="fa-solid fa-envelope"></i></a>
                     {% endif %}
 
                 </p>
