--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -30,7 +30,7 @@ comments: false
 
                     {% if author[1].instagram %}
                     <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].instagram }}"><i
-                            class="fa-brands fa-instagram-square"></i></a>
+                            class="fa-brands fa-instagram"></i></a>
                     {% endif %}
 
                     {% if author[1].twitter %}
