--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -46,9 +46,9 @@ comments: false
                 </p>
 
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9 ml-2">
                 <h3>{{ author[1].display_name }}</h3>
-                <p class="mt-3 mb-0">{{ author[1].description }}</p>
+                <p class="mt-3 mb-0 ml-2">{{ author[1].description }}</p>
             </div>
         </div>
     </div>
