--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -47,8 +47,8 @@ comments: false
 
             </div>
             <div class="col-md-9">
-                <h3>{{ author[1].display_name }}</h3>
-                <p class="mt-3 mb-0 ">{{ author[1].description }}</p>
+                <h3 class="pl-5">{{ author[1].display_name }}</h3>
+                <p class="mt-3 mb-0 pl-5">{{ author[1].description }}</p>
             </div>
         </div>
     </div>
