author padding and content update

--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -48,7 +48,7 @@ comments: false
             </div>
             <div class="col-md-9">
                 <h3 class="pl-5">{{ author[1].display_name }}</h3>
-                <p class="mt-3 mb-0 pl-5">{{ author[1].description }}</p>
+                <p class="mt-3 mb-0 pl-5 pr-5">{{ author[1].description }}</p>
             </div>
         </div>
     </div>
